
<?xml version="1.0"?>
<package format="3">
  <name>ros2bag_to_image</name>
  <version>0.1.0</version>
  <description>A package to extract images from a ROS2 bag file.</description>
  <maintainer email="agm.musalami@gmail.com">AbdullahGM</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>rosbag2_py</depend>
  <depend>cv_bridge</depend>
</package>

